# dream-game

./: CMakeLists.txt  README.md  button.hpp  container.cpp  container.hpp  entity.hpp  gui_manager.cpp  gui_manager.hpp  item.cpp  item.hpp  main.cpp  player.cpp  player.hpp  room.cpp  room.hpp  window.cpp  window.hpp  world.cpp  world.hpp
gui_classes/: button.cpp  drag_field.hpp  gui_element.hpp  rect.cpp  rect.hpp  text.cpp  text.hpp  window.cpp  window.hpp
items/: stick.hpp
